# AdventOfCode

./: .gitignore  README.md
2020/: Cargo.toml
2020/src/: main.rs
2020/src/problems/day1/: stage_1.rs  stage_2.rs
2020/src/problems/day10/: stage_2.rs
2020/src/problems/day11/: stage_1.rs  stage_2.rs
2020/src/problems/day13/: stage_1.rs  stage_2.rs
2020/src/problems/day14/: stage_1.rs
2020/src/problems/day15/: stage_1.rs
2020/src/problems/day16/: mod.rs  stage_1.rs
2020/src/problems/day17/: stage_1.rs  stage_2.rs
2020/src/problems/day18/: grammar.pest  stage_1.rs  stage_2.rs
2020/src/problems/day19/: grammar.pest  input.txt  stage_1.rs  stage_2.rs
2020/src/problems/day2/: password.rs  stage_1.rs  stage_2.rs
2020/src/problems/day3/: slope.rs  stage_1.rs
2020/src/problems/day4/: mod.rs  passport.rs  stage_1.rs
2020/src/problems/day5/: boarding_pass.rs  mod.rs
2020/src/problems/day6/: stage_1.rs
2020/src/problems/day7/: stage_1.rs
2020/src/problems/day8/: mod.rs  program.rs
2020/src/problems/day9/: stage_1.rs  stage_2.rs
adventofcode/src/: main.rs  util.rs
adventofcode/src/problems/day10/: stage_1.rs  stage_2.rs
adventofcode/src/problems/day12/: stage_1.rs  stage_2.rs
adventofcode/src/problems/day13/: stage_2.rs
adventofcode/src/problems/day14/: stage_2.rs
adventofcode/src/problems/day15/: stage_2.rs
adventofcode/src/problems/day16/: stage_2.rs  ticket.rs
adventofcode/src/problems/day2/: mod.rs
adventofcode/src/problems/day3/: mod.rs  stage_2.rs
adventofcode/src/problems/day4/: stage_2.rs
(+9 files in other folders)
