[package]
name = "adventofcode"
version = "0.1.0"
authors = ["tobixdev <tobias.schwarzinger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"